syntax = "proto3";

package com.venkatasudha.entities;

option java_outer_classname = "EntitiesProto";

message Student {
  int32 id = 1;
  string name = 2;
  Group group = 3;
}

enum Group {
  B_TECH = 0;
  M_TECH = 1;
  PHD = 2;
}
